test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_multiplicity/src/error_attr.sw
library;

#[error_type]
enum Ok {
    #[error(m = "ok")]
    A: (),
}

#[error_type]
enum NotOk1 {
    #[error]
    A: (),
}

#[error_type]
enum NotOk2 {
    #[error()]
    A: (),
}

#[error_type]
enum NotOk3 {
    #[error(m = "ok", m = "not ok")]
    A: (),
}